[workspace]
members = [
  "common/digest",
  "common/edit-distance",
  "common/test-allocator",
  "detcore",
  "detcore-model",
  "detcore/tests/testutils",
  "flaky-tests",
  "hermit-cli",
  "hermit-verify",
  "tests",
]
resolver = "2"

[workspace.package]
license = "BSD-3-Clause"
repository = "https://github.com/facebookexperimental/hermit"
